@@ -198,6 +198,52 @@ public final class AmqpConsumerActorTest extends AbstractConsumerActorWithAcknow
     }
 
     @Test
+    public void nullPayloadMappingTest() {
+        new TestKit(actorSystem) {
+            {
+                final MappingContext mappingContext = ConnectivityModelFactory.newMappingContextBuilder(
+                        "JavaScript",
+                        JavaScriptMessageMapperFactory
+                                .createJavaScriptMessageMapperConfigurationBuilder(
+                                        "plainStringMapping",
+                                        Collections.emptyMap())
+                                .incomingScript(TestConstants.Mapping.INCOMING_MAPPING_SCRIPT)
+                                .outgoingScript(TestConstants.Mapping.OUTGOING_MAPPING_SCRIPT)
+                                .build()
+                                .getPropertiesAsJson())
+                        .build();
+
+                final Sink<Object, NotUsed> mappingSink = setupMappingSink(getRef(), mappingContext,
+                        actorSystem);
+
+                final Source source = mock(Source.class);
+                when(source.getAuthorizationContext())
+                        .thenReturn(TestConstants.Authorization.AUTHORIZATION_CONTEXT);
+                when(source.getPayloadMapping())
+                        .thenReturn(ConnectivityModelFactory.newPayloadMapping("test"));
+                final ActorRef underTest = actorSystem.actorOf(AmqpConsumerActor.props(CONNECTION,
+                        consumerData("foo", mock(MessageConsumer.class), source), mappingSink,
+                        getRef(),
+                        mock(ConnectivityStatusResolver.class),
+                        CONNECTIVITY_CONFIG));
+
+                final String plainPayload = null;
+                final String correlationId = "cor-";
+
+                underTest.tell(getJmsMessage(plainPayload, correlationId), null);
+
+                final Command<?> command = expectMsgClass(Command.class);
+                assertThat(command.getType()).isEqualTo(ModifyAttribute.TYPE);
+                assertThat(command.getDittoHeaders().getCorrelationId()).contains(correlationId);
+                assertThat(((ModifyAttribute) command).getAttributePointer())
+                        .isEqualTo(JsonPointer.of("/foo"));
+                assertThat(((ModifyAttribute) command).getAttributeValue())
+                        .isEqualTo(JsonValue.nullLiteral());
+            }
+        };
+    }
+
+    @Test
     public void plainStringMappingTest() {
         new TestKit(actorSystem) {{
             final MappingContext mappingContext = ConnectivityModelFactory.newMappingContextBuilder(
@@ -277,14 +323,16 @@ public final class AmqpConsumerActorTest extends AbstractConsumerActorWithAcknow
     }
 
     @SafeVarargs // varargs array is not modified or passed around
-    private JmsMessage getJmsMessage(final String plainPayload, final String correlationId,
+    private JmsMessage getJmsMessage(@Nullable final String plainPayload, final String correlationId,
             final Map.Entry<String, ?>... headers) {
         try {
             final AmqpJmsTextMessageFacade messageFacade = new AmqpJmsTextMessageFacade();
             // give it a connection returning null for all methods to set any AMQP properties at all
             messageFacade.initialize(mock(AmqpConnection.class));
-            messageFacade.setText(plainPayload);
-            messageFacade.setContentType(Symbol.getSymbol("text/plain"));
+            if (plainPayload != null) {
+                messageFacade.setText(plainPayload);
+                messageFacade.setContentType(Symbol.getSymbol("text/plain"));
+            }
             messageFacade.setCorrelationId(correlationId);
 
             final JmsMessage message = messageFacade.asJmsMessage();
@@ -345,6 +393,9 @@ public final class AmqpConsumerActorTest extends AbstractConsumerActorWithAcknow
 
     @Test
     public void jmsMessageWithNullPropertyAndNullContentTypeTest() throws JMSException {
+        final var tracingAnnotationKey = "user-id";
+        final var tracingAnnotationValue = "value";
+
         new TestKit(actorSystem) {{
             final ActorRef testActor = getTestActor();
             final Sink<Object, NotUsed> mappingSink = setupMappingSink(testActor, null, actorSystem);
@@ -354,7 +405,8 @@ public final class AmqpConsumerActorTest extends AbstractConsumerActorWithAcknow
                     .thenReturn(TestConstants.Authorization.AUTHORIZATION_CONTEXT);
             when(source.getHeaderMapping())
                     .thenReturn(ConnectivityModelFactory.newHeaderMapping(
-                            Collections.singletonMap("correlation-id", "{{ header:correlation-id }}")
+                            Map.of("correlation-id", "{{ header:correlation-id }}",
+                                    "user-id", "{{ header:amqp.message.annotation:user-id }}")
                     ));
             final ActorRef underTest = actorSystem.actorOf(
                     AmqpConsumerActor.props(CONNECTION,
@@ -372,6 +424,7 @@ public final class AmqpConsumerActorTest extends AbstractConsumerActorWithAcknow
             messageFacade.setText(plainPayload);
             messageFacade.setContentType(null);
             messageFacade.setCorrelationId(correlationId);
+            messageFacade.setTracingAnnotation(tracingAnnotationKey, tracingAnnotationValue);
             final JmsMessage jmsMessage = messageFacade.asJmsMessage();
             underTest.tell(jmsMessage, null);
 
@@ -380,6 +433,8 @@ public final class AmqpConsumerActorTest extends AbstractConsumerActorWithAcknow
             assertThat(command.getDittoHeaders().getCorrelationId()).contains(correlationId);
             assertThat(command.getDittoHeaders().getContentType()).isEmpty();
             assertThat(command.getDittoHeaders().get("JMSXDeliveryCount")).isNull();
+            assertThat(command.getDittoHeaders().get(tracingAnnotationKey)).as("Message " +
+                    "annotations are extracted correctly").isEqualTo(tracingAnnotationValue);
             assertThat(((ModifyFeatureProperty) command).getPropertyPointer()).isEqualTo(JsonPointer.of("/x"));
             assertThat(((ModifyFeatureProperty) command).getPropertyValue()).isEqualTo(JsonValue.of(42));
         }};
